--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -101,7 +101,7 @@
         color: @color-after;
     }
 }
- 
+
 .make-icon(unsupported-browser, "\ea01");
 .make-icon(chrome, "\ea0a");
 .make-icon(firefox, "\ea0b");
@@ -361,11 +361,11 @@
 .make-icon(star, "\e93c");
 .make-icon(star-filled, "\e93d");
 .make-icon(trash, "\e93e");
-.make-icon(checkmark, "\ea10");
-.make-icon(googleplus, "\ea8b");
-.make-icon(facebook, "\ea90");
-.make-icon(twitter, "\ea96");
-.make-icon(linkedin, "\eaca");
+.make-icon(checkmark, @tick-character);
+.make-icon(googleplus, "\ea10");
+.make-icon(facebook, "\ea0f");
+.make-icon(twitter, "\ea12");
+.make-icon(linkedin, "\ea11");
 .make-icon(paste, "\e90e");
 
 /* ONLY MENU ICON COLORS */
