--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
@@ -130,7 +130,7 @@
     </div>
     <h3>Destination</h3>
 
-    <div class="panel" data-bind="with: localSettings">
+    <div class="panel" data-bind="with: localSettings, visible: $root.isBackupOptionAvailable('Local')">
         <div class="padding">
             <div class="toggle">
                 <input id="toggle-local" type="checkbox" data-bind="checked: enabled">
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <div class="panel" data-bind="with: s3Settings">
+    <div class="panel" data-bind="with: s3Settings, visible: $root.isBackupOptionAvailable('AmazonS3')">
         <div class="padding">
             <div class="toggle">
                 <input id="toggle-amazons3" type="checkbox" data-bind="checked: enabled">
@@ -216,7 +216,7 @@
         </div>
     </div>
 
-    <div class="panel" data-bind="with: azureSettings">
+    <div class="panel" data-bind="with: azureSettings, visible: $root.isBackupOptionAvailable('Azure')">
         <div class="padding">
             <div class="toggle">
                 <input id="toggle-azure" type="checkbox" data-bind="checked: enabled">
@@ -264,7 +264,7 @@
         </div>
     </div>
     
-    <div class="panel" data-bind="with: glacierSettings">
+    <div class="panel" data-bind="with: glacierSettings, visible: $root.isBackupOptionAvailable('AmazonGlacier')">
         <div class="padding">
             <div class="toggle">
                 <input id="toggle-amazonglacier" type="checkbox" data-bind="checked: enabled">
@@ -324,7 +324,7 @@
         </div>
     </div>
     
-    <div class="panel" data-bind="with: ftpSettings">
+    <div class="panel" data-bind="with: ftpSettings, visible: $root.isBackupOptionAvailable('FTP')">
         <div class="padding">
             <div class="toggle">
                 <input id="toggle-ftp" type="checkbox" data-bind="checked: enabled">
