RavenDB-11045 Detect and warn about unsupported browsers

--- a/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
+++ b/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
@@ -45,6 +45,10 @@ html {
         padding: @grid-gutter-width;
         width: 380px;
         max-width: 90%;
+        
+        .checkbox {
+            margin-top: 15px;
+        }
 
         .browser-links {
             margin: @grid-gutter-width -@grid-gutter-width;
