--- a/src/Raven.Studio/wwwroot/Content/css/pages/query.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/query.less
@@ -63,6 +63,22 @@
             }
         }
     }
+    
+    svg {
+        .levelName {
+            fill: white;
+            text-anchor: middle;
+            font-weight: bold;
+            font-size: 28px;
+        }
+        
+        .duration {
+            fill: white;
+            font-weight: bold;
+            font-size: 20px;
+            text-anchor: middle;
+        }
+    }
 }
 
 .results-error {
