--- a/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
@@ -10,6 +10,14 @@
 @dashboard-reduce-color: #d83731;
 
 #dashboard-container {
+    
+    .disabled {
+        a {
+            cursor: not-allowed;
+            opacity: 0.5;
+        }
+    }
+    
     .tooltip-inner {
         max-width: 215px;
     }
