RavenDB-11378 Fix the CPU & Memory Tooltips in Dashboard

--- a/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
@@ -19,7 +19,8 @@
     }
     
     .tooltip-inner {
-        max-width: 215px;
+        max-width: 255px;
+        white-space: nowrap;
     }
 
     .tooltip {
