--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -1827,6 +1827,7 @@ ul.properties {
 @import "pages/storage-report.less";
 @import "pages/sample-data.less";
 @import "pages/about.less";
+@import "pages/details-providers.less";
 @import "pages/edit-index.less";
 @import "pages/query.less";
 @import "pages/patch.less";
