--- a/src/Raven.Studio/wwwroot/Content/css/pages/query.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/query.less
@@ -168,3 +168,18 @@
         }
     }
 }
+
+.js-timings-container {
+    
+    .toggle {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+    }
+    
+    .from-cache {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+    }
+}
