RavenDB-10040 Show CompareExchangeCount and IdentitiesCount in the studio

--- a/src/Raven.Studio/wwwroot/App/views/database/status/statistics.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/status/statistics.html
@@ -81,6 +81,18 @@
                     <div class="value"><span data-bind="text: totalSizeOnDisk"></span></div>
                 </div>
             </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="stats-item">
+                    <div class="name"><i class="icon-identities"></i><span>Identities Count</span></div>
+                    <div class="value"><span data-bind="text: countOfIdentities"></span></div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="stats-item">
+                    <div class="name"><i class="icon-cmp-xchg"></i><span>Compare Exchange Count</span></div>
+                    <div class="value"><span data-bind="text: countOfCompareExchange"></span></div>
+                </div>
+            </div>
         </div>
     </div>
     <h1>Indexes Stats by Type
