RavenDB-11120 Add counters to import/export tasks in Studio

--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/exportDatabase.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/exportDatabase.html
@@ -41,6 +41,10 @@
                                 <input id="toggle4" type="checkbox" data-bind="checked: includeCompareExchange">
                                 <label for="toggle4">Include Compare Exchange</label>
                             </div>
+                            <div class="toggle">
+                                <input id="toggle-counters" type="checkbox" data-bind="checked: includeCounters">
+                                <label for="toggle-counters">Include Counters</label>
+                            </div>
 
                             <div data-bind="validationElement: exportDefinitionHasIncludes"> 
                                 <div class="help-block" data-bind="validationMessage: exportDefinitionHasIncludes"></div>
