--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromFile.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromFile.html
@@ -46,6 +46,10 @@
                             <input id="import_cmp_xch" type="checkbox" data-bind="checked: includeCompareExchange">
                             <label for="import_cmp_xch">Include Compare Exchange</label>
                         </div>
+                        <div class="toggle">
+                            <input id="import_counters" type="checkbox" data-bind="checked: includeCounters">
+                            <label for="import_counters">Include Counters</label>
+                        </div>
 
                         <div data-bind="validationElement: importDefinitionHasIncludes">
                             <div class="help-block" data-bind="validationMessage: importDefinitionHasIncludes"></div>
